[package]
name = "bank_stmt"
version = "0.1.0"
authors = ["chris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
derive_more = "0.99.2"
rusty-money = "0.4.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
anyhow = "1.0"
chrono = "0.4.15"